--- a/styles.css
+++ b/styles.css
@@ -16,9 +16,10 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(images/background1.jpeg);  
+    background-image: url(images/background.jpeg);  
     background-size:cover;;
     background-position: right;
+    
 }
 
 .container{
@@ -423,7 +424,7 @@ nav .fa-solid{
 /* -------CSS for small screens-------------------------------- */
 @media only screen and (max-width:600px){
     #header{
-        background-image: url(images/download\ mobile1.jpeg);
+        background-image: url(images/mobile.jpeg);
         padding-top: 20px;
     }
 
