--- a/styles.css
+++ b/styles.css
@@ -82,12 +82,12 @@ nav ul li a:hover::after{
     color: #ff6347;
     
 }
-.typing-animation {
+/* .typing-animation {
     display: inline-block;
     opacity: 0;
     animation: typing 0.9s steps(10, end) forwards; 
     letter-spacing: 0;
-}
+} */
 
 @keyframes typing {
     from {
